--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,7 +22,7 @@ body{
     background-color: #ffffff;
     color: #555;
     font-family: 'Lato', 'Arial', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 20px;
     text-rendering: optimizeLegibility;
     overflow-x: hidden;
@@ -379,14 +379,25 @@ header{
 } 
 
 /*-------paragraph---------- */
+.long-copy img{
+    float: left;
+    width: 25%;
+    width: 250px;
+  height: 250px;
+    shape-outside: circle(50%);
+    clip-path: circle(50%);
+    margin-right: 50px;
+}
 .long-copy{
 line-height: 145%;
-width: 70%;
+width: 90ch;
 /* margin: 0 15% 0 15%; */
-margin-left: 15%;
-font-size: 90%;
+/* margin-left: 15%; */
+font-size: 100%;
 color: #666666;
 font-family: 'Lato', 'Arial', sans-serif;
+/* font-weight: 300; */
+/* text-align: justify; */
 
 }
 
