--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -569,7 +569,7 @@ box-sizing: border-box;
 }
 
 .portfolio_slideup a{
-    color: #fff;
+
 }
 
 .ionicons{
@@ -600,9 +600,13 @@ box-sizing: border-box;
 .portfolio-photo img{
     width: 100%;
     height: auto;
-    transform: scale(1.05);
-    /* opacity: 0.7; */
-    transition: transform 0.5s;
+    transform: scale(1.02);
+    /*opacity: 0.7;
+    */transition: transform 0.5s;
+    -webkit-transform: scale(1.02);
+    -moz-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    -o-transform: scale(1.02);
 }
 
 .portfolio-photo img:hover{
