--- a/blog/blog.css
+++ b/blog/blog.css
@@ -115,6 +115,22 @@ aside a {
   text-decoration: none;
 }
 
+aside li {
+  margin-bottom: 10px;
+  border-bottom: 2px dotted rgb(238, 125, 135);
+}
+
+.img_content {
+  height: 70px;
+  width: 70%;
+  font-size: 18px;
+  float: right;
+}
+
+.posted_content {
+  float: left;
+  margin-left: 10px;
+}
 /* headline */
 h1,
 h2,
@@ -123,12 +139,13 @@ h4,
 h5,
 h6 {
   color: var(--btn-color);
+  margin-bottom: 10px;
 }
 
 p {
   font-size: 20px;
   line-height: 1.5;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .lists {
