--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@ a {
 :root {
   --btn-color: #00a78e;
   --bg-color-one: #f4f4f4;
+  --secoundary-color: #9e2900;
 }
 
 header,
@@ -62,7 +63,7 @@ h1 {
 
 /* ----------header---------------- */
 header {
-  background: url(../images/bg101.jpg) no-repeat center top;
+  background: url(../images/bg111.jpg) no-repeat center top;
 
   /* background-size: cover; */
   /* background-position: center; */
@@ -333,6 +334,7 @@ header {
   text-transform: none;
   font-style: italic;
   font-weight: normal;
+  font-size: 30px;
 }
 
 .banner-content ul li {
@@ -526,9 +528,9 @@ input[type="submit"]:hover {
 
 /* ---------portfolio------------ */
 .section-portfolio {
-  /* margin-bottom: 90px;
-height: auto;
-width: 100%; */
+  /* margin-bottom: 90px; */
+  height: auto;
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -540,11 +542,21 @@ width: 100%; */
 .portfolio-showcase li {
   display: block;
   float: left;
-  width: calc(25% - 10px);
-  margin: 5px;
+  /* width: calc(50% - 20px); */
+  /* height: 500px; */
+  /* margin: 10px; */
   box-sizing: border-box;
-  /* border: 0.1px solid red; */
+  /*border: 0.1px solid red;
+  */
+  /* width: 100%; */
+  margin-bottom: 20px;
   position: relative;
+  background: var(--bg-color-one);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 .portfolio_slideup {
@@ -588,6 +600,14 @@ width: 100%; */
   cursor: pointer;
 }
 
+.portfolio_li:hover {
+  bottom: 0%;
+  display: inline;
+  cursor: pointer;
+  box-shadow: 4px 2px 10px -1px rgba(85, 85, 85, 0.99);
+  -webkit-box-shadow: 4px 2px 10px -1px rgba(85, 85, 85, 0.99);
+}
+
 .portfolio-photo {
   margin: 0;
   width: 100%;
@@ -597,22 +617,88 @@ width: 100%; */
 
 .portfolio-photo img {
   width: 100%;
-  height: auto;
+  height: 100%;
   transform: scale(1.02);
   /*opacity: 0.7;
     */
-  transition: transform 0.5s;
+  /* transition: transform 0.5s;
   -webkit-transform: scale(1.02);
   -moz-transform: scale(1.02);
   -ms-transform: scale(1.02);
-  -o-transform: scale(1.02);
+  -o-transform: scale(1.02); */
 }
 
 .portfolio-photo img:hover {
   opacity: 1;
-  transform: scale(1);
+  /* transform: scale(1); */
+}
+/* new */
+.flex_row {
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  /* height: 300px; */
+  gap: 10%;
+  padding: 10px;
 }
 
+.portfolio-photo {
+  /* border: 1px solid blue; */
+  width: 45%;
+  /* height: 400px; */
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.portfolio_contents {
+  width: 45%;
+  /* border: 1px solid blue; */
+  padding: 10px;
+  color: #666666;
+}
+
+.portfolio_contents h2 {
+  color: var(--btn-color);
+  /* color: #2febce; */
+  /* text-align: right; */
+  /* margin-bottom: 20px; */
+  font-size: 20px;
+}
+
+.portfolio_contents p {
+  font-size: 85%;
+  margin: 15px 0;
+  line-height: 145%;
+  letter-spacing: 1px;
+}
+.portfolio_contents button {
+  background: #fff;
+  padding: 5px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  border: 2px solid var(--btn-color);
+  color: var(--btn-color);
+  position: relative;
+  left: 0;
+  bottom: 0;
+}
+
+.border_color {
+  border-bottom: 5px solid var(--secoundary-color);
+}
+
+.border_color_one {
+  border-bottom: 5px solid var(--btn-color);
+}
 /* -----------blog----------- */
 .section-blog {
   /* background-color: #797878;  */
@@ -620,6 +706,7 @@ width: 100%; */
 }
 .box img {
   width: 100%;
+  height: 400px;
   height: auto;
 }
 
