--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -551,7 +551,7 @@ input[type="submit"]:hover {
   /* width: 100%; */
   margin-bottom: 20px;
   position: relative;
-  background: var(--bg-color-one);
+  /* background: var(--bg-color-one); */
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
