--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -597,13 +597,13 @@ input[type="submit"]:hover {
 .portfolio_li:hover .portfolio_slideup {
   bottom: 0%;
   display: inline;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .portfolio_li:hover {
   bottom: 0%;
   display: inline;
-  cursor: pointer;
+  /* cursor: pointer; */
   box-shadow: 4px 2px 10px -1px rgba(85, 85, 85, 0.99);
   -webkit-box-shadow: 4px 2px 10px -1px rgba(85, 85, 85, 0.99);
 }
@@ -618,7 +618,7 @@ input[type="submit"]:hover {
 .portfolio-photo img {
   width: 100%;
   height: 100%;
-  transform: scale(1.02);
+  /* transform: scale(1.02); */
   /*opacity: 0.7;
     */
   /* transition: transform 0.5s;
@@ -650,11 +650,11 @@ input[type="submit"]:hover {
   /* border: 1px solid blue; */
   width: 45%;
   /* height: 400px; */
-  border-radius: 10px;
+  /* border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+  -o-border-radius: 10px; */
 }
 .portfolio_contents {
   width: 45%;
@@ -680,6 +680,7 @@ input[type="submit"]:hover {
 .portfolio_contents button {
   background: #fff;
   padding: 5px;
+  font-size: 15px;
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -690,15 +691,46 @@ input[type="submit"]:hover {
   position: relative;
   left: 0;
   bottom: 0;
+  margin-right: 10px;
+}
+
+.portfolio_contents button a {
+  text-decoration: none;
+  color: var(--btn-color);
 }
 
 .border_color {
-  border-bottom: 5px solid var(--secoundary-color);
+  /* border-bottom: 5px solid var(--secoundary-color); */
 }
 
 .border_color_one {
-  border-bottom: 5px solid var(--btn-color);
+  /* border-bottom: 5px solid var(--btn-color); */
 }
+
+.code_container {
+  display: flex;
+  gap: 20px;
+  margin: 10px 0;
+}
+
+.react[name="logo-react"] {
+  color: #61dbfb;
+  font-size: 30px;
+}
+
+.js[name="logo-nodejs"] {
+  color: #f0db4f;
+  font-size: 30px;
+}
+
+.css[name="logo-css3"] {
+  color: #2965f1;
+  font-size: 30px;
+}
+
+/* button {
+  font-size: 10px;
+} */
 /* -----------blog----------- */
 .section-blog {
   /* background-color: #797878;  */
